doc: updated notebook

--- a/Python/Python_Intermediate_DataCamp.ipynb
+++ b/Python/Python_Intermediate_DataCamp.ipynb
@@ -1114,6 +1114,662 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas\n",
+    "\n",
+    "- High level data manipulation tool\n",
+    "- By Wes McKinney\n",
+    "- Built on NumPy\n",
+    "- Pandas stores tabular Data in an object named **\"DataFrame\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         country    capital    area  population\n",
+      "BR        Brazil   Brasilia   8.516      200.40\n",
+      "RU        Russia     Moscow  17.100      143.50\n",
+      "IN         India  New Delhi   3.286     1252.00\n",
+      "CH         China    Beijing   9.597     1357.00\n",
+      "SA  South Africa   Pretoria   1.221       52.98\n",
+      "--------------------------------------------------\n",
+      "brics_data [0]: {'country': 'Brazil', 'capital': 'Brasilia', 'area': 8.516, 'population': 200.4}\n",
+      "--------------------------------------------------\n",
+      "BR          Brazil\n",
+      "RU          Russia\n",
+      "IN           India\n",
+      "CH           China\n",
+      "SA    South Africa\n",
+      "Name: country, dtype: object\n",
+      "--------------------------------------------------\n",
+      "df iloc [0]:\n",
+      " country         Brazil\n",
+      "capital       Brasilia\n",
+      "area             8.516\n",
+      "population       200.4\n",
+      "Name: BR, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "brics_data = [\n",
+    "    {\"country\": \"Brazil\", \"capital\": \"Brasilia\", \"area\": 8.516, \"population\": 200.40},\n",
+    "    {\"country\": \"Russia\", \"capital\": \"Moscow\", \"area\": 17.100, \"population\": 143.50},\n",
+    "    {\"country\": \"India\", \"capital\": \"New Delhi\", \"area\": 3.286, \"population\": 1252.00},\n",
+    "    {\"country\": \"China\", \"capital\": \"Beijing\", \"area\": 9.597, \"population\": 1357.00},\n",
+    "    {\"country\": \"South Africa\", \"capital\": \"Pretoria\", \"area\": 1.221, \"population\": 52.98},\n",
+    "]\n",
+    "\n",
+    "# brics_data = List of dictionaries.\n",
+    "\n",
+    "df = pd.DataFrame(brics_data, index=[\"BR\", \"RU\", \"IN\", \"CH\", \"SA\"])\n",
+    "print(df)\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "print(\"brics_data [0]:\",brics_data[0])\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "print(df[\"country\"])\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "print(\"df iloc [0]:\\n\",df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using `index_col` in Pandas\n",
+    "\n",
+    "The `index_col` option is used when creating a DataFrame directly while reading from a file (e.g., CSV, Excel). It allows you to set a specific column in the file as the DataFrame's index.\n",
+    "\n",
+    "However, if you already have a DataFrame, you cannot directly use `index_col`. Instead, you can achieve similar functionality by using `.set_index()`.\n",
+    "\n",
+    "\n",
+    "- **`index_col=None`**: No column is set as the index, and Pandas assigns a default numeric index.  \n",
+    "- **`index_col=0`**: The first column is used as the DataFrame's index.  \n",
+    "- **`index_col='column_name'`**: A specific column, identified by its name, is set as the index.  \n",
+    "- **`index_col=[...]`**: Multiple columns are used to create a hierarchical (multi-level) index."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Index and select data\n",
+    "\n",
+    "- Square brackets\n",
+    "- Advanced methods\n",
+    "    + loc\n",
+    "    + iloc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          Brazil\n",
+      "1          Russia\n",
+      "2           India\n",
+      "3           China\n",
+      "4    South Africa\n",
+      "Name: country, dtype: object\n",
+      "Type: <class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [] Column access\n",
+    "\n",
+    "import pandas as pd\n",
+    "data = [\n",
+    "    {\"country\": \"Brazil\", \"capital\": \"Brasilia\", \"area\": 8.516, \"population\": 200.40},\n",
+    "    {\"country\": \"Russia\", \"capital\": \"Moscow\", \"area\": 17.100, \"population\": 143.50},\n",
+    "    {\"country\": \"India\", \"capital\": \"New Delhi\", \"area\": 3.286, \"population\": 1252.00},\n",
+    "    {\"country\": \"China\", \"capital\": \"Beijing\", \"area\": 9.597, \"population\": 1357.00},\n",
+    "    {\"country\": \"South Africa\", \"capital\": \"Pretoria\", \"area\": 1.221, \"population\": 52.98},\n",
+    "]\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(df[\"country\"]) # returns a series and at the End: Name: country, dtype: object = MetaData\n",
+    "\n",
+    "print(\"Type:\", type(df[\"country\"])) # returns a series  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Why a Series Instead of a DataFrame?\n",
+    "- Efficiency: A Series is a more efficient, memory-friendly structure when you're working with a single column.\n",
+    "Indexing Flexibility: It allows easier access to individual elements and operations specific to one-dimensional data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          Brazil\n",
+      "1          Russia\n",
+      "2           India\n",
+      "3           China\n",
+      "4    South Africa\n",
+      "Name: country, dtype: object\n",
+      "--------------------------------------------------\n",
+      "        country    capital\n",
+      "0        Brazil   Brasilia\n",
+      "1        Russia     Moscow\n",
+      "2         India  New Delhi\n",
+      "3         China    Beijing\n",
+      "4  South Africa   Pretoria\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"country\"])\n",
+    "print(\"-\" * 50)\n",
+    "print(df[[\"country\", \"capital\"]]) #List of lists [[...]] = returns a SubDataFrame\n",
+    "print(\"-\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>capital</th>\n",
+       "      <th>area</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Moscow</td>\n",
+       "      <td>17.100</td>\n",
+       "      <td>143.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>India</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>3.286</td>\n",
+       "      <td>1252.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>9.597</td>\n",
+       "      <td>1357.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country    capital    area  population\n",
+       "1  Russia     Moscow  17.100       143.5\n",
+       "2   India  New Delhi   3.286      1252.0\n",
+       "3   China    Beijing   9.597      1357.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[1:4] # Row access"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Discussion***\n",
+    "\n",
+    "- Square brackets have a limited functionality\n",
+    "\n",
+    "- Idealy we want:\n",
+    "    - 2D NumPy arrays\n",
+    "        + my_array[rows, colums]\n",
+    "- Pandas\n",
+    "    - loc (label-based)\n",
+    "    - iloc (integer-position.based)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country       Russia\n",
+      "capital       Moscow\n",
+      "area            17.1\n",
+      "population     143.5\n",
+      "Name: RU, dtype: object\n",
+      "--------------------------------------------------\n",
+      "   country capital  area  population\n",
+      "RU  Russia  Moscow  17.1       143.5\n",
+      "--------------------------------------------------\n",
+      "   country    capital    area  population\n",
+      "RU  Russia     Moscow  17.100       143.5\n",
+      "IN   India  New Delhi   3.286      1252.0\n",
+      "CH   China    Beijing   9.597      1357.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [\n",
+    "    {\"country\": \"Brazil\", \"capital\": \"Brasilia\", \"area\": 8.516, \"population\": 200.40},\n",
+    "    {\"country\": \"Russia\", \"capital\": \"Moscow\", \"area\": 17.100, \"population\": 143.50},\n",
+    "    {\"country\": \"India\", \"capital\": \"New Delhi\", \"area\": 3.286, \"population\": 1252.00},\n",
+    "    {\"country\": \"China\", \"capital\": \"Beijing\", \"area\": 9.597, \"population\": 1357.00},\n",
+    "    {\"country\": \"South Africa\", \"capital\": \"Pretoria\", \"area\": 1.221, \"population\": 52.98},\n",
+    "]\n",
+    "\n",
+    "brics = pd.DataFrame(data, index=[\"BR\", \"RU\", \"IN\", \"CH\", \"SA\"])  \n",
+    "\n",
+    "print(brics.loc[\"RU\"])\n",
+    "print(\"-\" * 50)\n",
+    "print(brics.loc[[\"RU\"]])\n",
+    "print(\"-\" * 50)\n",
+    "print(brics.loc[[\"RU\", \"IN\", \"CH\"]]) # returns multiple rows and all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   country    capital\n",
+      "RU  Russia     Moscow\n",
+      "IN   India  New Delhi\n",
+      "CH   China    Beijing\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>capital</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BR</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Brasilia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RU</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Moscow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IN</th>\n",
+       "      <td>India</td>\n",
+       "      <td>New Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CH</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Beijing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SA</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>Pretoria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         country    capital\n",
+       "BR        Brazil   Brasilia\n",
+       "RU        Russia     Moscow\n",
+       "IN         India  New Delhi\n",
+       "CH         China    Beijing\n",
+       "SA  South Africa   Pretoria"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(brics.loc[[\"RU\", \"IN\", \"CH\"], [\"country\", \"capital\"]])\n",
+    "print(\"-\" *50)\n",
+    "brics.loc[:, [\"country\", \"capital\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Recap***\n",
+    "\n",
+    "- Square brackets \n",
+    "    + Column access brics[[\"country\", \"capital\"]]\n",
+    "    + Row access: only through slicing brics[1:4]\n",
+    "- loc (label-based)\n",
+    "    + Row access brics.loc[[\"RU\",\"IN\",\"CH\"]]\n",
+    "    + Column access brics.loc[:,[\"country\", \"capital\"]]\n",
+    "    + Row and column access brics.loc[[\"RU\", \"IN\", \"CH\"], [\"country\", \"capital\"]]\n",
+    "\n",
+    "**When to Use loc:**\n",
+    "\n",
+    "If the DataFrame has meaningful row or column labels (e.g., country codes, names, dates), loc is better because it allows to work directly with those labels.\n",
+    "Example: df.loc[\"RU\", \"capital\"]\n",
+    "Readability:\n",
+    "\n",
+    "Using labels makes code more intuitive and easier to understand, especially in larger projects.\n",
+    "Flexible Slicing:\n",
+    "\n",
+    "I can combine label-based row and column selection in one operation: df.loc[\"RU\":\"CH\", \"country\":\"capital\"]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   country capital  area  population\n",
+      "RU  Russia  Moscow  17.1       143.5\n",
+      "--------------------------------------------------\n",
+      "   country    capital    area  population\n",
+      "RU  Russia     Moscow  17.100       143.5\n",
+      "IN   India  New Delhi   3.286      1252.0\n",
+      "CH   China    Beijing   9.597      1357.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Row access iloc\n",
+    "print(brics.iloc[[1]])\n",
+    "print(\"-\"*50)\n",
+    "print(brics.iloc[[1,2,3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   country capital  area\n",
+      "RU  Russia  Moscow  17.1\n",
+      "--------------------------------------------------\n",
+      "         country    capital    area\n",
+      "BR        Brazil   Brasilia   8.516\n",
+      "RU        Russia     Moscow  17.100\n",
+      "IN         India  New Delhi   3.286\n",
+      "CH         China    Beijing   9.597\n",
+      "SA  South Africa   Pretoria   1.221\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Row an column access iloc\n",
+    "\n",
+    "print(brics.iloc[[1],[0,1,2]])\n",
+    "print(\"-\" *50)\n",
+    "print(brics.iloc[:, [0, 1, 2]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21.35510204 20.97505669 21.75028214 24.7473475  21.44127836]\n",
+      "[False False False  True False]\n",
+      "[24.7473475]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data\n",
+    "np_height = np.array([1.75, 1.68, 1.71, 1.89, 1.79])\n",
+    "np_weight = np.array([65.4, 59.2, 63.6, 88.4, 68.7])\n",
+    "bmi = np_weight / np_height ** 2\n",
+    "print(bmi)\n",
+    "\n",
+    "print(bmi > 23)\n",
+    "\n",
+    "print(bmi[bmi > 23])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Comparison operators: how Python values relate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 < 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 <= 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "y = 3\n",
+    "x < y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Other comparison\n",
+    "\"carl\" < \"chris\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparators\n",
+    "\n",
+    "| **Comparator** | **Meaning**               |\n",
+    "|-----------------|---------------------------|\n",
+    "| `<`             | Strictly less than        |\n",
+    "| `<=`            | Less than or equal        |\n",
+    "| `>`             | Strictly greater than     |\n",
+    "| `>=`            | Greater than or equal     |\n",
+    "| `==`            | Equal                     |\n",
+    "| `!=`            | Not equal                 |"
+   ]
   }
  ],
  "metadata": {
