feat: added updated Jupyter Notebook

--- a/Python/car_data_project/Car_Dataset_Analysis_Project_Konstantin.ipynb
+++ b/Python/car_data_project/Car_Dataset_Analysis_Project_Konstantin.ipynb
@@ -10751,37 +10751,64 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Summary: Car Dataset Analysis**\n",
+        "# **Project Summary: Car Dataset Analysis**  \n",
         "\n",
-        "In this project, I worked with a car dataset to clean, transform, and analyze key variables related to vehicle performance, pricing, and popularity. The main goal was to identify patterns and relationships between different features.\n",
+        "## **Objective**  \n",
+        "The goal of this project was to clean, transform, and analyze a car dataset to uncover relationships between key vehicle attributes, including performance, pricing, and popularity. By applying data cleaning techniques, statistical analysis, and visualization, meaningful insights were derived.\n",
         "\n",
-        "### **<span style=\"color:blue\">Key Findings</span>**\n",
+        "---\n",
         "\n",
-        "1. **<span style=\"color:blue\">Correlation Analysis</span>**  \n",
-        "   - Cars with higher **Engine HP** tend to have a **higher price (MSRP)**. This makes sense because more powerful cars usually have better performance features, making them more expensive.  \n",
-        "   - A negative correlation exists between **Engine HP and fuel efficiency (MPG)**. More powerful engines consume more fuel, which results in lower **City MPG and Highway MPG**.  \n",
-        "   - The relationship between **MSRP and Popularity** is weak, meaning that a higher price does not necessarily make a car more popular. Other factors like brand reputation, reliability, and affordability likely play a bigger role.  \n",
-        "   - **City MPG and Highway MPG are strongly correlated**, which means that cars with good city mileage also tend to perform well on highways.\n",
+        "## **Key Findings**  \n",
         "\n",
-        "2. **<span style=\"color:blue\">Descriptive Statistics</span>**  \n",
-        "   - The average **MSRP** varies significantly between different vehicle sizes and engine types.  \n",
-        "   - Some cars have extremely high prices, which could be due to luxury or high-performance models.  \n",
-        "   - The distribution of **City MPG** shows that most cars fall within a certain range, but there are some very fuel-efficient models as well.\n",
+        "### **1️⃣ Correlation Analysis**  \n",
+        "- 🔹 **Engine HP & MSRP → Strong Positive Correlation**  \n",
+        "  - Cars with **higher horsepower** tend to be more expensive.  \n",
+        "  - **Explanation:** High-performance engines are typically found in premium vehicles.  \n",
         "\n",
-        "3. **<span style=\"color:blue\">Data Visualization Insights</span>**  \n",
-        "   - The **scatter plot** of **Engine HP vs. MSRP** clearly shows that cars with more horsepower are priced higher.  \n",
-        "   - The **boxplot** for **Driven Wheels vs. MSRP** shows that all-wheel-drive cars tend to have higher prices compared to front-wheel and rear-wheel-drive cars.  \n",
-        "   - The **bar chart** for **Vehicle Size vs. MSRP** reveals that larger vehicles, such as SUVs and trucks, are generally more expensive than smaller ones like sedans and hatchbacks.\n",
+        "- 🔹 **Engine HP & Fuel Efficiency (MPG) → Negative Correlation**  \n",
+        "  - Cars with **more horsepower consume more fuel**, resulting in lower City MPG and Highway MPG.  \n",
+        "  - **Explanation:** High-performance engines have higher fuel consumption.  \n",
         "\n",
-        "### **<span style=\"color:blue\">Conclusion</span>**  \n",
-        "Through this analysis, I learned how to clean and visualize data while identifying key relationships between features. The correlation between horsepower, fuel efficiency, and price was expected, but it was interesting to see that price alone does not determine a car’s popularity. This project helped me understand how data can be used to find meaningful insights.\n",
+        "- 🔹 **MSRP & Popularity → Weak or No Correlation**  \n",
+        "  - Vehicle price does not necessarily impact its popularity.  \n",
+        "  - **Explanation:** Affordability and reliability are often bigger factors in consumer preference.  \n",
         "\n",
+        "- 🔹 **City MPG & Highway MPG → Very Strong Positive Correlation**  \n",
+        "  - Cars with good **city fuel efficiency** also tend to perform well on highways.  \n",
+        "  - **Explanation:** Fuel-efficient vehicles generally have optimized fuel consumption in both driving conditions.  \n",
         "\n",
+        "---\n",
         "\n",
-        "Best regards,\n",
-        "Konstantin Milonas\n",
+        "## **2️⃣ Descriptive Statistics**  \n",
+        "- The **average MSRP** varies significantly across vehicle categories and engine types.  \n",
+        "- Some **luxury and high-performance models** have extremely high prices, affecting price distribution.  \n",
+        "- **Fuel efficiency distribution** shows that most vehicles fall within a standard MPG range, with some highly efficient models standing out.  \n",
         "\n",
-        "For any further questions, feel free to contact me via email: info@condata.io\n"
+        "---\n",
+        "\n",
+        "## **3️⃣ Data Visualization Insights**  \n",
+        "- 📊 **Scatter Plot (Engine HP vs. MSRP):** Confirms that cars with **higher horsepower** have **higher prices**.  \n",
+        "- 📈 **Box Plot (Driven Wheels vs. MSRP):** Reveals that **all-wheel-drive (AWD) vehicles** tend to be **more expensive**.  \n",
+        "- 📊 **Bar Chart (Vehicle Size vs. MSRP):** Larger vehicles, such as **SUVs and trucks**, generally cost **more than sedans and hatchbacks**.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **Conclusion**  \n",
+        "This project highlighted the **power of data analysis** in identifying key relationships within the automotive market.  \n",
+        "\n",
+        "### 🔥 **Key Takeaways:**  \n",
+        "✅ **Higher horsepower leads to higher prices but lower fuel efficiency.**  \n",
+        "✅ **Fuel-efficient cars perform well in both city and highway conditions.**  \n",
+        "✅ **A higher price does not necessarily make a car more popular.**  \n",
+        "\n",
+        "Through this analysis, I gained valuable experience in **data cleaning, correlation analysis, and visualization techniques**, strengthening my ability to extract meaningful insights from complex datasets.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Best regards,**  \n",
+        "**Konstantin Milonas**  \n",
+        "\n",
+        "📧 **For any further questions, feel free to contact me via email: info@condata.io**  \n"
       ],
       "metadata": {
         "id": "Kr6p5hmuw4_H"
