feat: Added updated Jupyter Notebook

--- a/Python/car_data_project/Car_Dataset_Analysis_Project_Konstantin.ipynb
+++ b/Python/car_data_project/Car_Dataset_Analysis_Project_Konstantin.ipynb
@@ -14,7 +14,6 @@
         "giA61AvgTOan",
         "7Jp8iproUIfW",
         "ssXQX0RXXgBB",
-        "lT3PJs8AnxJI",
         "QfxkCEJ6uTgY"
       ]
     },
@@ -10680,7 +10679,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Correlation Analysis:**"
+        "**Correlation Analysis:**"
       ],
       "metadata": {
         "id": "QfxkCEJ6uTgY"
@@ -10717,36 +10716,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **Interpretation of Key Relationships**  \n",
-        "\n",
-        "#### **Engine HP & MSRP → Strong Positive Correlation**  \n",
-        "- A value close to **+1** means: The higher the engine power (`Engine HP`), the higher the price (`MSRP`).  \n",
-        "- **Logical explanation**: More powerful engines are typically found in more expensive vehicles.  \n",
-        "\n",
-        "#### **Engine HP & Highway MPG / City MPG → Negative Correlation**  \n",
-        "- A value below **0** indicates: Cars with more horsepower consume more fuel and have lower MPG values.  \n",
-        "- **Logical explanation**: High-performance engines often have higher fuel consumption.  \n",
-        "\n",
-        "#### **MSRP & Popularity → Weak or No Correlation**  \n",
-        "- A value close to **0** means: There is no direct relationship between vehicle price and popularity.  \n",
-        "- **Possible reason**: Expensive cars are not necessarily more popular—affordable and reliable vehicles may be in higher demand.  \n",
-        "\n",
-        "#### **City MPG & Highway MPG → Very Strong Positive Correlation**  \n",
-        "- A value close to **+1** means: Cars that are fuel-efficient in the city also perform well on the highway.  \n",
-        "- **Logical explanation**: Fuel-efficient vehicles generally have low consumption in both conditions.  \n",
-        "\n",
-        "## 📌 Conclusion  \n",
-        "✅ Cars with higher horsepower are more expensive but consume more fuel.  \n",
-        "✅ Fuel-efficient cars perform well both in city and highway driving.  \n",
-        "✅ The price of a vehicle does not directly influence its popularity.  \n"
-      ],
-      "metadata": {
-        "id": "lXynCSMwvCGQ"
-      }
     },
     {
       "cell_type": "markdown",
